testdata/invalid/unclosed_string.pr
// Unclosed string literal.
main() {
  String s = "hello;
}
